[package]
name = "solana-banking-bench"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false # Security: Prevents accidental publishing of internal dev tools
workspace = "../dev-bins"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# --- Features Management ---
[features]
# Standard features for core performance testing
agave-unstable-api = []
dev-context-only-utils = []
frozen-abi = []

[dependencies]
# Performance Utilities
rayon = { workspace = true }        # Parallel data processing
solana-measure = { workspace = true } # High-precision timing and metrics

# Core Solana Interfaces
solana-core = { workspace = true, features = ["dev-context-only-utils"] }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-perf = { workspace = true }  # Hardware-accelerated performance primitives

# Networking & TPU (Transaction Processing Unit)
solana-tpu-client = { workspace = true }
agave-banking-stage-ingress-types = { workspace = true }

# CLI & Support
clap = { version = "4.0", features = ["derive", "env"] } # Optimization: Upgraded to v4 for better UX
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }



# --- Build Profile Optimizations ---
# These settings ensure the benchmark measures the code performance, not compiler overhead.
[profile.release]
opt-level = 3            # Full optimization for performance-critical code
lto = "thin"             # Link Time Optimization for cross-crate speed
codegen-units = 1        # Higher quality code generation
panic = "abort"          # Reduces binary size and improves performance in high-load scenarios
debug = false            # Disable debug symbols for clean performance profile
