[package]
name = "agave-banking-stage-ingress-types"
description = "Agave banking stage ingress types"
documentation = "https://docs.rs/agave-banking-stage-ingress-types"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
solana-perf = { workspace = true }
