[package]
name = "solana-banks-interface"
description = "Solana banks RPC interface"
documentation = "https://docs.rs/solana-banks-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-context = { workspace = true, features = ["serde"] }
tarpc = { workspace = true, features = ["full"] }
