[package]
name = "solana-banks-server"
description = "Solana banks server"
documentation = "https://docs.rs/solana-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "solana_banks_server"

[features]
agave-unstable-api = []

[dependencies]
agave-feature-set = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
solana-account = { workspace = true }
solana-banks-interface = { workspace = true }
solana-client = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-message = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubkey = { workspace = true }
solana-runtime = { workspace = true }
solana-runtime-transaction = { workspace = true }
solana-send-transaction-service = { workspace = true }
solana-signature = { workspace = true }
solana-svm = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }
tokio-util = { workspace = true }
