[package]
name = "bench-get-confirmed-blocks-with-data"
version = "1.15.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
solana-sdk = { path = "../sdk", version = "=1.15.0" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.15.0" }
solana-transaction-status = { path = "../transaction-status", version = "=1.15.0" }
tokio = { version = "1", features = ["full"] }
