[package]
name = "bench-get-confirmed-blocks-with-data"
version = "1.10.39"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
solana-sdk = { path = "../sdk", version = "=1.10.39" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.10.39" }
solana-transaction-status = { path = "../transaction-status", version = "=1.10.39" }
tokio = { version = "1", features = ["full"] }
