[package]
name = "solana-bench-tps"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false # Security: Prevents accidental publication of performance tools to crates.io
workspace = "../dev-bins"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# --- Strategic Features ---
[features]
default = ["agave-unstable-api"]
agave-unstable-api = [] # Access to experimental Agave validator features
dev-context-only-utils = []
frozen-abi = []

[dependencies]
# Metrics & Observability
solana-metrics = { workspace = true }
solana-measure = { workspace = true }
csv = { workspace = true } # For exporting benchmark results to data analysis tools

# Networking Stack (QUIC is standard for modern Solana)
solana-quic-client = { workspace = true }
solana-streamer = { workspace = true }
solana-connection-cache = { workspace = true }

# Transaction Orchestration
solana-tpu-client = { workspace = true } # Direct interaction with Validator TPU
solana-tps-client = { workspace = true }
solana-compute-budget-interface = { workspace = true }

# Memory Management: Critical for avoiding GC pauses during high-load benchmarks
[target.'cfg(not(any(target_env = "msvc", target_os = "freebsd")))'.dependencies]
jemallocator = { workspace = true }



# --- Build Optimization for Accurate Benchmarking ---
[profile.release]
opt-level = 3            # Max optimization for high-load simulation
lto = "fat"              # Full Link Time Optimization for maximum execution speed
codegen-units = 1        # Single unit generation for better optimization context
panic = "abort"          # Smaller binary and zero overhead on panic paths
