[package]
name = "solana-bench-vote"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
agave-unstable-api = []

[dependencies]
agave-logger = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
solana-clap-utils = { workspace = true }
solana-client = { workspace = true }
solana-connection-cache = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-streamer = { workspace = true }
solana-transaction = { workspace = true }
solana-version = { workspace = true }
solana-vote-program = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(not(any(target_env = "msvc", target_os = "freebsd")))'.dependencies]
jemallocator = { workspace = true }
